2006-02-22  Naba Kumar  <naba@gnome.org>

	* libanjuta/anjuta-plugin-description.c,
	libanjuta/anjuta-plugin-description.h, libanjuta/anjuta-shell.c,
	libanjuta/anjuta-shell.h, libanjuta/interfaces/libanjuta.idl,
	manuals/reference/libanjuta/tmpl/anjuta-plugin-description.sgml,
	manuals/reference/libanjuta/tmpl/anjuta-shell.sgml,
	manuals/reference/libanjuta/tmpl/ianjuta-editor.sgml: Fixed API docs.
	
	Patch from Anjuta Khongbantabam <k_anjuta@yahoo.com>:
	* libanjuta/interfaces/libanjuta.idl: Added more API documentation stubs.
	
2006-02-21  Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	plugins/editor/text_editor.c, plugins/editor/text_editor.h,
	plugins/editor/text_editor_cbs.c: Implemanted IAnjutaIndicable
	interface for editor.

2006-02-21  Naba Kumar  <naba@gnome.org>

	* plugins/editor/text_editor.c: Fixed a crash bug on copy operation.

	Patch from Anjuta Khongbantabam <k_anjuta@yahoo.com>:
	* libanjuta/interfaces/libanjuta.idl: Added API documentation stubs.

2006-02-21  Jean-Noel Guiheneuf <guiheneuf.jean-noel@wanadoo.fr>

	* GTKSOURCEVIEW EDITOR
	plugins/sourceview/sourceview.c :
	Fixed copy and Goto Line.
	
	plugins/macro/macro-actions.c plugins/macro/macro-dialog.c
	plugins/macro/plugin.c :
	Fixed Insert key word and Insert macro.

2006-02-19  Johannes Schmid <jhs@cvs.gnome.org>

	* plugins/document-manager/anjuta-docman.c:
	(on_open_filesel_response): Fixed useless g_slist statement (thanks gcc for complaining)
	
	* configure.in:
	plugins/Makefile.am:
	plugins/sourceview/.cvsignore:
	plugins/sourceview/Makefile.am:
	plugins/sourceview/plugin.c: :
	plugins/sourceview/plugin.h:
	plugins/sourceview/sourceview.c: 
	plugins/sourceview/sourceview.h:
	plugins/sourceview/sourceview.plugin:
	plugins/sourceview/sourceview.plugin.in:
	plugins/sourceview/sourceview.png:

	Added sourceview editor plugin

2006-02-19 Naba Kumar  <naba@gnome.org>

	* libanjuta/interfaces/libanjuta.idl,
	manuals/reference/libanjuta/tmpl/ianjuta-editor.sgml,